src/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Date_Issued__c</fullName>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Email_Format</fullName>
        <active>true</active>
        <description>Validation to make sure email is in proper format</description>
        <errorConditionFormula>NOT(REGEX( Email__c , &quot;^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}$&quot;))</errorConditionFormula>
        <errorMessage>Please enter a Valid email address.
Make sure your Email contains @ symbol.</errorMessage>
    </validationRules>
</CustomObject>